examples/test/testpolicy299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy299
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key17: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value35
          key0: value5
          key43: value26
      podSelector:
        matchLabels:
          key21: value14
